added build push actions

--- a/pbd/notebooks/scraper.ipynb
+++ b/pbd/notebooks/scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "35080b54-0c38-48f2-aeaa-c23b18caa1d5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "31556864-41d6-456d-8f90-5d022c61b6d1",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "fcbe1168-1cb9-4c57-9cc3-83fe3e622e43",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
     "            links = []\n",
     "            for link_cell in link_cells:\n",
     "                a_tag = link_cell.find('a')\n",
-    "                if a_tag and 'href' in a_tag.attrs and \"books.ms\" in a_tag['href']:\n",
+    "                if a_tag and 'href' in a_tag.attrs and (\"books.ms\" in a_tag['href']:\n",
     "                    links.append(a_tag['href'])\n",
     "                    break\n",
     "            \n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "edb0e6d3-a2c2-4dba-9e43-5574dd37a9f7",
    "metadata": {},
    "outputs": [],
@@ -100,36 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "272aa414-df0b-473b-9e8d-f23b923de8bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = get_libgen_url(book_name = \"physics_of_the_impossible\")"
+    "url = get_libgen_url(book_name = \"Cosmos, Carl Sagan\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "55fe22b4-65ea-48d5-9d7d-4f2b2a66fd47",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://libgen.is/search.php?req=physics_of_the_impossible&lg_topic=libgen&open=0&view=simple&res=100&phrase=1&column=def'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "c3aa8afe-c6da-4af2-9804-f75a475ac746",
    "metadata": {},
    "outputs": [],
@@ -139,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "0377a47e-0ac2-4ef9-8776-6ab556c1edae",
    "metadata": {},
    "outputs": [],
@@ -149,44 +138,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "0ceca0cf-2a7c-4fcb-bc76-8a383d537941",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Physics of the impossible [1\\xa0ed.] 9780385520690, 0385520697',\n",
+       "[{'title': 'Cosmos 9789731114712, 9731114718',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/18030181E6D4F40D8FED29D77979FA04',\n",
-       "   'http://libgen.li/ads.php?md5=18030181E6D4F40D8FED29D77979FA04']},\n",
-       " {'title': 'Physics of the Impossible: A Scientific Exploration into the World of Phasers, Force Fields, Teleportation, and Time Travel [1\\xa0ed.] 0385520697, 9780385520690',\n",
+       "  'links': ['http://books.ms/main/2A2963E0CADEED180A0EDA77C4540829',\n",
+       "   'http://libgen.li/ads.php?md5=2A2963E0CADEED180A0EDA77C4540829']},\n",
+       " {'title': 'Star Stuff: Carl Sagan and the Mysteries of the Cosmos 1596439602, 9781596439603',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/C50CCD9AE95C0F2ED5DA1429007C817B',\n",
-       "   'http://libgen.li/ads.php?md5=C50CCD9AE95C0F2ED5DA1429007C817B']},\n",
-       " {'title': 'Physics of the Impossible - A Scientific Exploration Into the World of Phasers, Force Fields, Teleportation, and Time Travel [Reprint\\xa0ed.] 9780307278821, 0307278824',\n",
+       "  'links': ['http://books.ms/main/EA1AC2464E06E6366A35C628F3DE7A97',\n",
+       "   'http://libgen.li/ads.php?md5=EA1AC2464E06E6366A35C628F3DE7A97']},\n",
+       " {'title': 'Cosmos (Chinese Edition) 7206072070, 9787206072079',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/B13679F6A337319C561EE0C16F74A053',\n",
-       "   'http://libgen.li/ads.php?md5=B13679F6A337319C561EE0C16F74A053']},\n",
-       " {'title': 'Physics of the Impossible: A Scientific Exploration into the World of Phasers, Force Fields, Teleportation, and Time Travel [1\\xa0ed.] 0385520697, 9780385520690',\n",
+       "  'links': ['http://books.ms/main/5E852C295701C0CC19A687F2C1F92859',\n",
+       "   'http://libgen.li/ads.php?md5=5E852C295701C0CC19A687F2C1F92859']},\n",
+       " {'title': 'Cosmos',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/7F67C950EEB22F8A19A8F2C4AF10C51D',\n",
-       "   'http://libgen.li/ads.php?md5=7F67C950EEB22F8A19A8F2C4AF10C51D']},\n",
-       " {'title': 'Physics of the impossible : a scientific exploration into the world of phasers, force fields, teleportation, and time travel [1st ed] 9780385520690, 0385520697',\n",
+       "  'links': ['http://books.ms/main/421FC6E79FE0BB58D0AAA4C476AA9057',\n",
+       "   'http://libgen.li/ads.php?md5=421FC6E79FE0BB58D0AAA4C476AA9057']},\n",
+       " {'title': 'Cosmos 9780345331359, 0345331354',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/C5A5646FB22820C8752014AFCE20749C',\n",
-       "   'http://libgen.li/ads.php?md5=C5A5646FB22820C8752014AFCE20749C']},\n",
-       " {'title': 'Physics of the Impossible: A Scientific Exploration into the World of Phasers, Force Fields, Teleportation, and Time Travel [Reprint\\xa0ed.] 0307278824, 9780307278821',\n",
+       "  'links': ['http://books.ms/main/494AF965C8F206D07ACECFA10AD213C0',\n",
+       "   'http://libgen.li/ads.php?md5=494AF965C8F206D07ACECFA10AD213C0']},\n",
+       " {'title': 'Cosmos 9780345331359, 0345331354',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/38B6B408A39C62C167516E697EE89239',\n",
-       "   'http://libgen.li/ads.php?md5=38B6B408A39C62C167516E697EE89239']},\n",
-       " {'title': 'Physics of the Impossible: A Scientific Exploration into the World of Phasers, Force Fields, Teleportation, and Time Travel [1st\\xa0ed.] 0385520697, 978-0-385-52069-0',\n",
+       "  'links': ['http://books.ms/main/BFC84621195D5E5806256DFD4490ACDF',\n",
+       "   'http://libgen.li/ads.php?md5=BFC84621195D5E5806256DFD4490ACDF']},\n",
+       " {'title': 'Cosmos 0345331354, 9780345331359',\n",
        "  'extension': 'pdf',\n",
-       "  'links': ['http://books.ms/main/885437BA38370DED0DB1B9AE5E41E857',\n",
-       "   'http://libgen.li/ads.php?md5=885437BA38370DED0DB1B9AE5E41E857']}]"
+       "  'links': ['http://books.ms/main/7FF5C578647447620AAE1852924E71D9',\n",
+       "   'http://libgen.li/ads.php?md5=7FF5C578647447620AAE1852924E71D9']},\n",
+       " {'title': 'Cosmos  (Spanish, full images)',\n",
+       "  'extension': 'pdf',\n",
+       "  'links': ['http://books.ms/main/7C7F72763ECF977466683C4F138D8D56',\n",
+       "   'http://libgen.li/ads.php?md5=7C7F72763ECF977466683C4F138D8D56']},\n",
+       " {'title': 'Cosmos [1\\xa0ed.] 0-394-50294-9',\n",
+       "  'extension': 'pdf',\n",
+       "  'links': ['http://books.ms/main/C112FD85A7BF2A76DEE5F89EF1EE4531',\n",
+       "   'http://libgen.li/ads.php?md5=C112FD85A7BF2A76DEE5F89EF1EE4531']},\n",
+       " {'title': 'Cosmos 9731114718',\n",
+       "  'extension': 'pdf',\n",
+       "  'links': ['http://books.ms/main/FDC331D48E5A547D2D2717C1359C6D08',\n",
+       "   'http://libgen.li/ads.php?md5=FDC331D48E5A547D2D2717C1359C6D08']},\n",
+       " {'title': 'Cosmos',\n",
+       "  'extension': 'pdf',\n",
+       "  'links': ['http://books.ms/main/AE438D9F02A85FF1DC1CD49293DCA686',\n",
+       "   'http://libgen.li/ads.php?md5=AE438D9F02A85FF1DC1CD49293DCA686']},\n",
+       " {'title': 'Cosmos',\n",
+       "  'extension': 'pdf',\n",
+       "  'links': ['http://books.ms/main/6674125DCC97FFB8065C887AA63FA2F1',\n",
+       "   'http://libgen.li/ads.php?md5=6674125DCC97FFB8065C887AA63FA2F1']}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,12 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "9016d69e-50c6-435b-a3f2-d2e178ce0581",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.request import urlretrieve"
+    "from urllib.request import urlretrieve\n",
+    "import requests"
    ]
   },
   {
@@ -249,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "3255ea93-7d92-4b01-a8dc-e538afd47d54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_page = requests.get('http://books.ms/main/18030181E6D4F40D8FED29D77979FA04')"
+    "d_page = requests.get('http://books.ms/main/421FC6E79FE0BB58D0AAA4C476AA9057')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "9cae7eb4-26ec-47e7-a976-bd5567d8e64a",
    "metadata": {},
    "outputs": [],
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "489ba82c-79c4-4a78-be8f-7ba5116a4b5d",
    "metadata": {},
    "outputs": [],
@@ -279,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "c1ebb4ec-3fbc-4451-9d43-b6f177185106",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://download.books.ms/main/75000/18030181e6d4f40d8fed29d77979fa04/Michio%20Kaku%20-%20Physics%20of%20the%20impossible-Doubleday%20%282008%29.pdf'"
+       "'https://download.books.ms/main/1157000/421fc6e79fe0bb58d0aaa4c476aa9057/Carl%20Sagan%20-%20Cosmos-Gradiva%20%282001%29.pdf'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
